--- a/pfaProject/Angular/angular.json
+++ b/pfaProject/Angular/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "pfaProject": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "pfaProject"
+    }
+  },
+  "defaultProject": "pfaProject",
+  "cli": {
+    "analytics": "1a2ba829-740a-4d9b-8924-7cc7a2f949a8"
+  }
 }
