--- a/pfaProject/Angular/package.json
+++ b/pfaProject/Angular/package.json
@@ -25,9 +25,10 @@
     "angular-bootstrap-md": "^8.10.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
-    "chart.js": "^2.5.0",
+    "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
