--- a/pfaProject/Angular/package.json
+++ b/pfaProject/Angular/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng2-charts": "^2.3.0",
+    "ngx-toastr": "^12.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
